Building+floor+room CRUD.automatically create room and floors after create building